# todo

./: CMakeLists.txt  CMakePresets.json  README.md  todo.cpp  todo.h
src/: demo.cpp  main.cpp  todo_controller.cpp  todo_controller.h  todo_item.cpp  todo_item.h  todo_list.cpp  todo_list.h  todo_mainwindow.cpp  todo_mainwindow.h  todo_mainwindow.ui  todo_tui.cpp  todo_tui.h
src/controller/: todo_controller.cpp  todo_controller.h
src/model/: todo_item.cpp  todo_item.h  todo_list.cpp  todo_list.h
src/view/: todo_view.cpp  todo_view.h
